Added handlebars for blogposts and dashboard

--- a/public/template_home.html
+++ b/public/template_home.html
@@ -41,7 +41,7 @@
             </ul>
             <ul class="nav mx-1">
                 <li class="nav-item">
-                    <a class="nav-link rnd py-1 px-2" href="#">Logout</a>
+                    <button id="logout-button" class="bg-sec fnt-quat rnd py-1 px-2">Logout</button>
                 </li>
             </ul>
         </nav>
