--- a/public/template_login.html
+++ b/public/template_login.html
@@ -64,7 +64,7 @@
                 </div>
                 <button id="submit-button"  type="submit" class="btn btn-block sub-btn mt-4">Submit</button>
             </form>
-            <p class="mt-2 pb-2">Don't have an account? <a href="#">Sign-up</a></p>
+            <p class="mt-2 pb-2">Don't have an account? <a href="/signup">Sign-up</a></p>
         </div>
 
         <!-- Sign-up form -->
@@ -87,7 +87,7 @@
                 </div>
                 <button id="submit-button" type="submit" class="btn btn-block sub-btn mt-4">Submit</button>
             </form>
-            <p class="mt-2 pb-2">Already have an account? <a href="#">Login</a></p>
+            <p class="mt-2 pb-2">Already have an account? <a href="/login">Login</a></p>
         </div>
 
 
