Cleaned up code

--- a/public/template_login.html
+++ b/public/template_login.html
@@ -84,6 +84,7 @@
                 <div class="form-group">
                     <label for="signup-password">Password:</label>
                     <input type="password" id="signup-password" class="form-control" >
+                    <p class="mt-1 text-center pass-cap">(Your password should be at least 8 characters long)</p>
                 </div>
                 <button id="submit-button" type="submit" class="btn btn-block sub-btn mt-4">Submit</button>
             </form>
